Bug 101535 - [bisected] [Skylake] Kwin won't start and glxgears coredumps
Summary: [bisected] [Skylake] Kwin won't start and glxgears coredumps
Status: RESOLVED FIXED
Alias: None
Product: Mesa
Classification: Unclassified
Component: Drivers/DRI/i965 (show other bugs)
Version: git
Hardware: Other All
: medium normal
Assignee: Intel 3D Bugs Mailing List
QA Contact: Intel 3D Bugs Mailing List
URL:
Whiteboard:
Keywords:
Depends on:
Blocks:
 
Reported: 2017-06-21 11:19 UTC by Mike Lothian
Modified: 2017-06-21 18:26 UTC (History)
2 users (show)

See Also:
i915 platform:
i915 features:


Attachments

Description Mike Lothian 2017-06-21 11:19:32 UTC
I've bisected the issue back to:

f60e23cb57724f001bfafdb577cedf660d6917e1 is the first bad commit
commit f60e23cb57724f001bfafdb577cedf660d6917e1
Author: Topi Pohjolainen <topi.pohjolainen@intel.com>
Date:   Thu Dec 22 17:22:39 2016 +0200

    i965/miptree/gen7+: Use isl for hiz layouts

    v2: Use better assert by checking isl_surf_get_hiz_surf()

    Reviewed-by: Jason Ekstrand <jason@jlekstrand.net>
    Signed-off-by: Topi Pohjolainen <topi.pohjolainen@intel.com>

The commit does not revert cleanly

00:02.0 VGA compatible controller [0300]: Intel Corporation HD Graphics 530 [8086:191b] (rev 06)

Please let me know if you'd like any more info
Comment 1 Jason Ekstrand 2017-06-21 18:26:24 UTC
This should be fixed by the following commit:

commit 17918a037242d04b1a455a2f7a0b869e7a568456
Author: Jason Ekstrand <jason.ekstrand@intel.com>
Date:   Wed Jun 21 11:15:25 2017 -0700

    i965/miptree: Move isl_surf_get_(hiz|mcs)_surf out of the assert
    
    Bugzilla: https://bugs.freedesktop.org/show_bug.cgi?id=101535
    Bugzilla: https://bugs.freedesktop.org/show_bug.cgi?id=101538
    Bugzilla: https://bugs.freedesktop.org/show_bug.cgi?id=101539
    Reviewed-by: Topi Pohjolainen <topi.pohjolainen@intel.com>


Use of freedesktop.org services, including Bugzilla, is subject to our Code of Conduct. How we collect and use information is described in our Privacy Policy.